wp-content/themes/planningpress/style.css
/* ... */
strong {
  font-weight: 900;
}
hr {
  margin: 1.5em 0;
  border: 0;
  border: 1px solid #eeeeee;
  border-top-color: rgba(0,0,0,0.2);
  border-bottom-color: rgba(255,255,255,0.75);
  border-right: 0;
  border-left: 0;
}
.container hr {
  margin-right: -10px;
  margin-left: -10px;
}
.capitalize { text-transform: capitalize; }

/* Images */
img {
  max-width: 100%;
  height: auto;
}
.icon-inline {
  height: 1.5em;
  width: auto;
  margin: 0 0.25em -0.325em 0.5em;
}
.icon-muted {
  opacity: 0.75;
}

/* Forms */
form {
}
label {
}
.input-block,
textarea {
	-webkit-box-sizing: border-box;
	   -moz-box-sizing: border-box;
	        box-sizing: border-box;
  width: 100%;
  border: 0.25em solid #a1cbcf;
  padding: 0.5em;
  outline: 0;
}
.input-block:focus,
textarea:focus {
  outline: 2px solid #268099;
}
textarea {
  height: 6.5em;
  resize: none;
}


/* =Nonsemantic Base Styles
-------------------------------------------------------------- */

.clearfix:before, .clearfix:after { content: "\0020"; display: block; height: 0; visibility: hidden; }
.clearfix:after { clear: both; }
.clearfix { zoom: 1; }

/* Hide for both screenreaders and browsers */
.is-hidden { display: none; visibility: hidden; }
/* Hide only visually, but have it available for screenreaders */
.screen-reader-text,
.is-visuallyhidden {
  position: absolute !important;
  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
  clip: rect(1px, 1px, 1px, 1px);
}
/* Hide visually and from screenreaders, but maintain layout */
.is-invisible { visibility: hidden; }

.nobreak { white-space: nowrap; }


/* =Layout
-------------------------------------------------------------- */

html { height: 100%; }
body {
  min-height: 100%;
  background-color: #a6b13b;
  text-align: left;
  padding: 0 0.5em;
}

#page {
  background-color: #fff;
  max-width: 1024px;
  margin: 0 auto;
}
#branding {
  padding: 1em 5%;
  position: relative;
}
#main {
  padding: 1em 5%;
}
#primary {
  position: relative;
}
#content {}
#secondary {}
#colophon {
  padding: 1em 5%;
}


/* =Header
-------------------------------------------------------------- */

#site-marquee {
  padding-top: 40px;
}
#site-title { font-size: 1em; margin: 0 0 1em; }
#site-title a { display: block; }
#site-title img { display: block; }
#site-description {}
#branding #searchform { display: none; }

/* Utility Menu */
#utility {
  position: absolute;
  top: 1em;
  right: 5%;
}
#utility li {
  float: left;
  margin-left: 0.5em;
}
#utility .emailalerts a,
#utility .facebook a,
#utility .twitter a,
#utility .mindmixer a,
#utility .linkedin a {
  display: block;
  width: 29px;
  height: 29px;
  overflow: hidden;
  text-indent: -9999px;
}
#utility .emailalerts a { width: 100px; background-image: url(images/ri-utility-emailalerts.png); }
#utility .facebook a { background-image: url(images/ri-utility-facebook.png); }
#utility .twitter a { background-image: url(images/ri-utility-twitter.png); }
#utility .mindmixer a { background-image: url(images/ri-utility-mindmixer.png); }
#utility .linkedin a { background-image: url(images/ri-utility-linkedin.png); }

/* Access Menu */
#nav-bttn { 
  display: block;
  clear: both; 
  text-align: center;
  font-family: 'Hammersmith One', Arial, sans-serif;
  text-transform: uppercase;
  color: #fff;
  background-color: #bbb;
  text-decoration: none;
  line-height: 1.75;
  padding: 0.25em 0.75em 0em;
}
#nav-bttn .icon { display: none; }
#nav-bttn .prompt {}
#access {}
#access li { margin-top: 0.25em; }
#access li a {
  display: block;
  color: #0d5d6f;
  font-family: 'Hammersmith One', sans-serif;
  text-transform: uppercase;
  text-align: center;
  text-decoration: none;
  line-height: 1.75;
  padding: 0.25em 0.75em 0em;
}
#access .yellow a { background-color: #fece40; }
#access .green a { background-color: #a6b13b; }
#access .blue a { background-color: #7aacb3; }
#access .violet a { background-color: #c899a8; }

/* Add This */
#addthis-site-share { display: none; }


/* =Content
-------------------------------------------------------------- */

/* Widgets */
.widget { 
  margin-bottom: 2em;
}
.widget ul { 
  margin-left: 0em;
  padding-left: 1.2em;
}

/* Custom Menu Widget */
.widget_nav_menu {
  text-align: center;
  font-family: 'Roboto Slab', serif;
  font-weight: 300;
  margin-bottom: 4em;
}
.widget_nav_menu ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
.widget_nav_menu li, .widget_nav_menu li {
  margin-bottom: 1em;
  padding-bottom: 0;
}
.widget_nav_menu a {
  font-size: 1.5em;
  font-family: 'Roboto Slab', serif;
  font-weight: 300;
  text-decoration: none;
}
.widget_nav_menu .current-menu-item  a {
  color: #444;
}

/* Frontpage Widgets */
#frontpage-widgets {
  margin: -1em 0 2em;
}
#frontpage-widgets .callout {
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 6em;
  overflow: hidden;
  margin-bottom: 0.25em;
}
#frontpage-widgets .callout a {
  display: block;
  font-size: 1.5em;
  line-height: 2;
  font-family: 'Roboto Slab', serif;
  font-weight: 700;
  color: #fff;
  text-decoration: none;
  padding: 2em 0.75em;
  margin-top: -1em;
}
#frontpage-widgets .stream { background-image: url(images/ri-stream.png); }
#frontpage-widgets .people { background-image: url(images/ri-people.png); }
#frontpage-widgets .train { background-image: url(images/ri-train.png); }
#frontpage-widgets .houses { background-image: url(images/ri-houses.png); }
#frontpage-widgets .yellow a { box-shadow: inset 4em 0 7em #fdbe00; }
#frontpage-widgets .green a { box-shadow: inset 4em 0 7em #a6b13b; }
#frontpage-widgets .blue a { box-shadow: inset 4em 0 7em #4d9099; }
#frontpage-widgets .violet a { box-shadow: inset 4em 0 7em #913451; }


/* =Page Template: Media Tags
-------------------------------------------------------------- */

#media-tags-menu {
  list-style: none;
  margin: 1em 0;
  padding: 1em 0 1em;
  border-top: 1px solid #bbb;
  border-bottom: 1px solid #bbb;
}
/* ... */

